# gtable_py

./: README.md  mkdocs.yml  pyproject.toml
docs/: api.md  index.md
gtable_py/: __init__.py  _add_grob.py  _add_rows_cols.py  _add_space.py  _align.py  _bind.py  _filter.py  _gtable.py  _layouts.py  _padding.py  _trim.py  _utils.py  _z.py
site/: 404.html  api.html  index.html  objects.inv
site/search/: search_index.json
tests/: conftest.py  test_bind.py  test_coverage_add_grob.py  test_coverage_add_space.py  test_coverage_align.py  test_coverage_bind.py  test_coverage_gtable.py  test_coverage_layouts.py  test_coverage_padding.py  test_coverage_utils.py  test_filter.py  test_gtable.py  test_layout.py  test_subsetting.py  test_trim.py  test_z_order.py
