[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtable_py"
version = "0.3.6.9000-c017439"
description = "Python port of the R gtable package"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "grid_py>=0.1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material", "mkdocs-jupyter"]

[tool.hatch.build.targets.wheel]
packages = ["gtable_py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
